@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2018-2024 Kevin B. Hendricks, Stratford, Ontario, Canada
+**  Copyright (C) 2018-2026 Kevin B. Hendricks, Stratford, Ontario, Canada
 **  Copyright (C) 2012 John Schember <john@nachtimwald.com>
 **  Copyright (C) 2012 Dave Heiland
 **
@@ -48,6 +48,7 @@ ClipboardHistorySelector::ClipboardHistorySelector(QWidget *parent)
     m_savedHistory(false)
 {
     ui.setupUi(this);
+    setWindowFlags(windowFlags() | Qt::WindowMinimizeButtonHint); 
     ExtendUI();
     ReadSettings();
     ConnectSignalsToSlots();
@@ -112,6 +113,7 @@ void ClipboardHistorySelector::RestoreClipboardState()
 
 void ClipboardHistorySelector::SetupClipboardHistoryTable()
 {
+    ui.clipboardItemsTable->clear();
     ui.clipboardItemsTable->setRowCount(0);
     ui.clipboardItemsTable->setRowCount(m_ClipboardHistoryItems->count());
 
@@ -164,7 +166,6 @@ void ClipboardHistorySelector::SetupClipboardHistoryTable()
 void ClipboardHistorySelector::ClipboardChanged()
 {
     const QString text = QApplication::clipboard()->text();
-
     if (text.isEmpty()) {
         return;
     }
@@ -174,11 +175,15 @@ void ClipboardHistorySelector::ClipboardChanged()
     if (existing_index > 0) {
         m_ClipboardHistoryItems->move(existing_index, 0);
     } else if (existing_index < 0) {
+        
         m_ClipboardHistoryItems->insert(0, text);
 
         while (m_ClipboardHistoryItems->size() > CLIPBOARD_HISTORY_MAX) {
             m_ClipboardHistoryItems->removeLast();
         }
+    }
+    if (isVisible()) {
+        SetupClipboardHistoryTable();
     }
 }
 
@@ -235,7 +240,7 @@ bool ClipboardHistorySelector::eventFilter(QObject *obj, QEvent *event)
 
             if (row >= 0 && row < ui.clipboardItemsTable->rowCount()) {
                 ui.clipboardItemsTable->selectRow(row);
-                accept();
+                DoPaste();
                 return true;
             }
         }
@@ -245,16 +250,37 @@ bool ClipboardHistorySelector::eventFilter(QObject *obj, QEvent *event)
     return QDialog::eventFilter(obj, event);
 }
 
+void ClipboardHistorySelector::DoPaste()
+{
+    if (ui.clipboardItemsTable->rowCount() > 0) {
+        int selected_row = ui.clipboardItemsTable->currentRow();
+
+	if (selected_row >= 0) {
+            QTableWidgetItem *item = ui.clipboardItemsTable->item(selected_row, 1);
+            const QString text = item->data(Qt::UserRole).toString();
+            QApplication::clipboard()->setText(text);
+            emit PasteRequest(text);
+        } else {
+            // user does not have any rows selected - paste text currently on clipboard                                         
+            emit PasteRequest(QApplication::clipboard()->text());
+	}
+    }
+}
+
 void ClipboardHistorySelector::ClipboardItemDoubleClicked(QTableWidgetItem *item)
 {
-    accept();
+    DoPaste();
 }
 
 
-void ClipboardHistorySelector::buttonClicked(QAbstractButton * button)
+void ClipboardHistorySelector::buttonClicked(QAbstractButton * abutton)
 {
-    QDialogButtonBox::StandardButton standardButton = ui.buttonBox->standardButton(button);
-    // abort does an abort without cancelloing changes 
+    if (abutton == m_paste_button) {
+        DoPaste();
+        return;
+    }
+    QDialogButtonBox::StandardButton standardButton = ui.buttonBox->standardButton(abutton);
+    // abort does an abort without cancelling changes 
     if (standardButton == QDialogButtonBox::Abort) {
         m_savedHistory = true;
     }
@@ -263,6 +289,7 @@ void ClipboardHistorySelector::buttonClicked(QAbstractButton * button)
 
 void ClipboardHistorySelector::accept()
 {
+#if 0
     if (ui.clipboardItemsTable->rowCount() > 0) {
         int selected_row = ui.clipboardItemsTable->currentRow();
 
@@ -276,7 +303,7 @@ void ClipboardHistorySelector::accept()
             emit PasteRequest(QApplication::clipboard()->text());
         }
     }
-
+#endif
     WriteSettings();
     QDialog::accept();
 }
@@ -297,10 +324,11 @@ void ClipboardHistorySelector::reject()
 
 void ClipboardHistorySelector::ExtendUI()
 {
-    QPushButton *paste_button = ui.buttonBox->button(QDialogButtonBox::Ok);
-    paste_button->setText(tr("Paste"));
+    m_paste_button = ui.buttonBox->addButton(tr("Paste"), QDialogButtonBox::ActionRole);
     QPushButton *save_button = ui.buttonBox->button(QDialogButtonBox::Abort);
     save_button->setText(tr("Save"));
+    QPushButton * done_button = ui.buttonBox->button(QDialogButtonBox::Ok);
+    done_button->setText(tr("Done"));
     ui.clipboardItemsTable->installEventFilter(this);
     ui.clipboardItemsTable->setWordWrap(false);
     ui.clipboardItemsTable->horizontalHeader()->setStretchLastSection(true);
