@@ -1,9 +1,9 @@
 /************************************************************************
 **
-**  Copyright (C) 2018, 2019 Kevin B. Hendricks, Stratford, Ontario, Canada
-**  Copyright (C) 2012 John Schember <john@nachtimwald.com>
-**  Copyright (C) 2012 Dave Heiland
-**  Copyright (C) 2012 Grant Drake
+**  Copyright (C) 2018-2026 Kevin B. Hendricks, Stratford, Ontario, Canada
+**  Copyright (C) 2012      John Schember <john@nachtimwald.com>
+**  Copyright (C) 2012      Dave Heiland
+**  Copyright (C) 2012      Grant Drake
 **
 **  This file is part of Sigil.
 **
@@ -34,8 +34,10 @@
 
 #include "ui_ClipboardHistorySelector.h"
 
+class QPushButton;
+
 /**
- * The clipboard history window used for selecing entries to paste.
+ * The clipboard history window used for selecting entries to paste.
  */
 class ClipboardHistorySelector : public QDialog
 {
@@ -51,6 +53,7 @@ public slots:
     void SaveClipboardState();
     void RestoreClipboardState();
     void buttonClicked(QAbstractButton * button);
+    void DoPaste();
 
 signals:
     void PasteRequest(const QString &);
@@ -78,6 +81,8 @@ private:
     void ExtendUI();
     void ConnectSignalsToSlots();
 
+    QPushButton * m_paste_button;
+    QPushButton * m_refresh_button;
     QStringList *m_ClipboardHistoryItems;
     QStringList *m_PreviousClipboardHistoryItems;
 
